<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_phone"
            android:maxLength="11"
            android:inputType="phone"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CFD8DC"
            android:textSize="18sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_input_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_pwd"
            android:maxLength="11"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sub_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="#CFD8DC"
        android:hint="@string/register_register"/>

</LinearLayout>